# cloudnet-submit

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  config.toml  pyproject.toml  release  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: lint.yml  publish.yml  tests.yml
src/cloudnet_submit/: Submission.py  __init__.py  cfg.py  cli.py  cloudnet-config-example.toml  clu_cfg.py  configuration.py  dateutils.py  generate_config.py  main.py  submission.py  utils.py
tests/: cfg.py  cloudnet-config-test.toml  conftest.py  generate_testdata.py  test_cloudnet_submit.py
