[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
addopts = "--cov=cloudnet_submit --cov-report html"
testpaths = [
    "tests",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py38']
preview = true

[tool.isort]
line_length = 79
