[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudnet-submit"
authors = [
  { name="Niko Leskinen", email="niko.leskinen@fmi.fi" },
]
description = "Cloudnet data submission tool"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests >= 2.28.1",
  "toml >= 0.10.2",
]

[project.urls]
Homepage = "https://github.com/actris-cloudnet/cloudnet-submit"
Repository = "https://github.com/actris-cloudnet/cloudnet-submit"
Changelog = "https://github.com/actris-cloudnet/cloudnet-submit/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/actris-cloudnet/cloudnet-submit/issues"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "pylint",
  "autoflake",
  "isort",
  "pre-commit",
  "types-requests",
  "types-toml",
]
[project.scripts]
cloudnet-submit = "cloudnet_submit.main:main"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.dynamic]
version = {attr = "cloudnet_submit.version.__version__"}


[tool.pytest.ini_options]
addopts = "--cov=cloudnet_submit --cov-report html"
testpaths = [
    "tests",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.black]
line-length = 88
target-version = ['py38']
preview = true

[tool.isort]
profile= "black"
line_length = 88

[tool.pylint]
ignore-patterns = "test_.*\\.py,release"
ignore-paths = "^tests/.*"
good-names = ["i", "j", "k", "f",]
max-line-length = 88
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "too-many-arguments"
]
