[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudnet-submit"
authors = [
  {name = "Niko Leskinen", email = "niko.leskinen@fmi.fi"},
]
description = "Cloudnet data submission tool"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "braceexpand",
  "requests >= 2.28.1",
  "toml >= 0.10.2",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "types-requests",
  "types-setuptools",
  "types-toml",
]
# Not supported on Python <= 3.10
release = [
  "release-version",
]

[project.scripts]
cloudnet-submit = "cloudnet_submit.main:main"

[project.urls]
Homepage = "https://github.com/actris-cloudnet/cloudnet-submit"
Repository = "https://github.com/actris-cloudnet/cloudnet-submit"
Changelog = "https://github.com/actris-cloudnet/cloudnet-submit/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/actris-cloudnet/cloudnet-submit/issues"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=cloudnet_submit --cov-report html"
testpaths = [
  "tests",
]

[tool.release-version]
filename = "src/cloudnet_submit/version.py"
pattern = "__version__ = \"(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)\""
changelog = "CHANGELOG.md"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "PLC", "PLE", "PLW", "SIM", "UP"]
ignore = ["D1"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0414"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.dynamic]
version = {attr = "cloudnet_submit.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.tomlsort]
trailing_comma_inline_array = true
sort_inline_arrays = true
