[metadata]
name = cloudnet-submit
version = 0.0.1
author = Niko Leskinen
author_email = niko.leskinen@fmi.fi
description = Cloudnet data submission tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/actris-cloudnet/cloudnet-submit
project_urls =
    Bug Tracker = https://github.com/actris-cloudnet/cloudnet-submit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    toml
    requests

[options.extras_require]
test =
    pytest
    pytest-cov
    mypy
    flake8
    tox
    black
    pre-commit

[options.packages.find]
where = src

[options.package_data]
cloudnet_submit = py.typed

[flake8]
max-line-length = 120
extend-ignore = E203
