[metadata]
name = cloudnet-submit
version = attr: cloudnet_submit.__version__
author = Niko Leskinen
author_email = niko.leskinen@fmi.fi
description = Cloudnet data submission tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/actris-cloudnet/cloudnet-submit
project_urls =
    Bug Tracker = https://github.com/actris-cloudnet/cloudnet-submit/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests >= 2.28
    toml >= 0.10

[options.extras_require]
dev =
    pytest >= 7.1.2
    pytest-cov >= 3.0.0
    mypy >= 0.961
    flake8 >= 4.0.1
    tox >= 3.25.0
    black >= 22.3.0
    pre-commit >= 2.19.0
    types-requests >= 2.27.30
    types-toml >= 0.10.7

[options.entry_points]
console_scripts =
    cloudnet-submit = cloudnet_submit.main:main
    cloudnet-submit-generate-config = cloudnet_submit.generate_config:generate_config


[options.packages.find]
where = src

[options.package_data]
cloudnet_submit =
  py.typed
  cloudnet-config-example.toml


[flake8]
max-line-length = 79
extend-ignore = E203
